Documentados en L5-Swagger los gets generales con arreglos
