# app/Http/Resources/CategoriaResource.php
@@ -16,7 +16,15 @@ class CategoriaResource extends JsonResource
      *      @OA\Response(
      *          response="200",
      *          description="Operación realizada con éxito",
-     *          @OA\JsonContent(ref="#/components/schemas/Categoria")
+     *          @OA\JsonContent(
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="array",
+     *                  @OA\Items(
+     *                      ref="#/components/schemas/Categoria"
+     *                  )
+     *              )
+     *          )
      *      ),
      *      @OA\Response(
      *          response="default",
