# app/Http/Resources/ProductoResource.php
@@ -23,7 +23,15 @@ class ProductoResource extends JsonResource
      *      @OA\Response(
      *          response="200",
      *          description="Operación realizada con éxito",
-     *          @OA\JsonContent(ref="#/components/schemas/Producto")
+     *          @OA\JsonContent(
+     *                  @OA\Property(
+     *                      property="data",
+     *                      type="array",
+     *                      @OA\Items(
+     *                          ref="#/components/schemas/Producto")
+     *                  )
+     *              )
+     *          )
      *      ),
      *      @OA\Response(
      *          response="default",
